--- a/GitHubAwards/CustomViews/GithubLoadingView.xib
+++ b/GitHubAwards/CustomViews/GithubLoadingView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GithubLoadingView" customModule="GitHubAwards" customModuleProvider="target">
@@ -16,14 +16,14 @@
             <rect key="frame" x="0.0" y="0.0" width="282" height="50"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tmp-0.gif" translatesAutoresizingMaskIntoConstraints="NO" id="6ZZ-yB-lKC">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GithubLoading-0.gif" translatesAutoresizingMaskIntoConstraints="NO" id="6ZZ-yB-lKC">
                     <rect key="frame" x="126" y="10" width="30" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="O7U-Xf-x1d"/>
                         <constraint firstAttribute="width" constant="30" id="mO2-do-w7R"/>
                     </constraints>
                 </imageView>
-                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tmp-0.gif" translatesAutoresizingMaskIntoConstraints="NO" id="6I0-Fb-Hv2">
+                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GithubLoading-0.gif" translatesAutoresizingMaskIntoConstraints="NO" id="6I0-Fb-Hv2">
                     <rect key="frame" x="126" y="10" width="30" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="AQ2-ri-eVj"/>
@@ -63,6 +63,6 @@
         </view>
     </objects>
     <resources>
-        <image name="tmp-0.gif" width="128" height="128"/>
+        <image name="GithubLoading-0.gif" width="128" height="128"/>
     </resources>
 </document>
