--- a/GitHubAwards/CustomViews/AlertView.xib
+++ b/GitHubAwards/CustomViews/AlertView.xib
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AlertView" customModule="GitHubAwards" customModuleProvider="target">
             <connections>
                 <outlet property="blurView" destination="dCp-kM-cxC" id="4XV-jJ-jmc"/>
+                <outlet property="messageLabel" destination="Kh2-V6-I8E" id="Kfa-ej-VIe"/>
                 <outlet property="view" destination="iN0-l3-epB" id="LSB-3Z-T16"/>
             </connections>
         </placeholder>
