--- a/GitHubAwards/CustomViews/AlertView.xib
+++ b/GitHubAwards/CustomViews/AlertView.xib
@@ -24,36 +24,22 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dCp-kM-cxC" userLabel="BlurView">
                     <rect key="frame" x="0.0" y="0.0" width="340" height="48"/>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="An error occurred. Please try again" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kh2-V6-I8E">
-                    <rect key="frame" x="46" y="14" width="286" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="An error occurred. Please try again" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kh2-V6-I8E">
+                    <rect key="frame" x="8" y="15" width="324" height="18"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GitHub" translatesAutoresizingMaskIntoConstraints="NO" id="N06-Mp-xte">
-                    <rect key="frame" x="8" y="9" width="30" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="30" id="OCT-kD-RCh"/>
-                        <constraint firstAttribute="height" constant="30" id="lJN-kC-zD6"/>
-                    </constraints>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                            <integer key="value" value="15"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
-                </imageView>
             </subviews>
             <constraints>
-                <constraint firstItem="Kh2-V6-I8E" firstAttribute="leading" secondItem="N06-Mp-xte" secondAttribute="trailing" constant="8" id="0fa-25-piA"/>
                 <constraint firstAttribute="trailing" secondItem="oz9-rd-A8b" secondAttribute="trailing" id="JEe-qp-31l"/>
+                <constraint firstItem="Kh2-V6-I8E" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="LC3-Gl-xaz"/>
                 <constraint firstItem="oz9-rd-A8b" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="NhH-pJ-Ryy"/>
-                <constraint firstItem="Kh2-V6-I8E" firstAttribute="centerY" secondItem="N06-Mp-xte" secondAttribute="centerY" id="bfp-WM-fy0"/>
+                <constraint firstItem="Kh2-V6-I8E" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="W5b-Ci-c9M"/>
                 <constraint firstAttribute="bottom" secondItem="dCp-kM-cxC" secondAttribute="bottom" id="dPE-jP-nvd"/>
                 <constraint firstItem="oz9-rd-A8b" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="fs1-zG-RZq"/>
                 <constraint firstAttribute="trailing" secondItem="dCp-kM-cxC" secondAttribute="trailing" id="lee-SW-B1a"/>
-                <constraint firstItem="N06-Mp-xte" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="mbb-Xb-xlF"/>
                 <constraint firstItem="dCp-kM-cxC" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="pjt-E2-xx2"/>
-                <constraint firstItem="N06-Mp-xte" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="rPZ-2l-I3a"/>
                 <constraint firstItem="dCp-kM-cxC" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="sIV-Gi-25j"/>
                 <constraint firstAttribute="trailing" secondItem="Kh2-V6-I8E" secondAttribute="trailing" constant="8" id="wPa-Pw-71E"/>
                 <constraint firstAttribute="bottom" secondItem="oz9-rd-A8b" secondAttribute="bottom" id="wlR-RP-eXf"/>
@@ -63,7 +49,4 @@
             <point key="canvasLocation" x="239" y="20"/>
         </view>
     </objects>
-    <resources>
-        <image name="GitHub" width="32" height="32"/>
-    </resources>
 </document>
